--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
       <!-- Weather Display -->
       <div class="flex flex-col sm:flex-row justify-between items-center border-b border-gray-200 pb-3 mt-3 gap-4">
-        <img src="assets/weather/clouds.svg" alt="" id="weatherIcon" class="w-20 h-20 sm:w-24 sm:h-24">
+        <img src="assets/weather/clouds.svg" alt="" id="weatherIcon" class="weather-icon w-20 h-20 sm:w-24 sm:h-24">
         <div class="flex flex-col justify-end items-center sm:items-end">
           <h1 class="text-3xl sm:text-4xl font-semibold" id="temp">° C</h1>
           <h2 id="description" class="text-sm sm:text-base">Description</h2>
